[package]
name = "rustdiscordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mojang = "0.1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
curl = "0.4.42"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
[[bin]]
name = "bot"
path = "src/bot.rs"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]
version = "0.10"



